# c-icesat-2

./: README.md  environment.yml  setup.cfg  setup.py
.github/workflows/: test.yaml
ci/: environment-py3.7.yml  environment-py3.8.yml
data/forcing/JRA55_perturbations/: 00_preprocess.sh  01_make_perturbations.sh  02_postprocess.sh  lwdn_postprocessing_1_2.sh  mkpert.py  prec_postprocessing_1_2.sh  q_10_postprocessing_1_2.sh  swdn_postprocessing_1_2.sh  t_10_postprocessing_1_2.sh  u_10_postprocessing_1_2.sh  v_10_postprocessing_1_2.sh
data/forcing/JRA55_perturbations/job_scripts/: lwdn_postprocessing_1_2.sh  lwdn_postprocessing_2_2.sh  lwdn_preprocess.sh  postprocess_lwdn_2000-2011.o1615866  postprocess_lwdn_2011-2021.o1615868  postprocess_prec_2000-2010.o1615891  postprocess_prec_2011-2021.o1615888  postprocess_q_10_2000-2010.o1615897  postprocess_q_10_2011-2021.o1615899  postprocess_swdn_2000-2011.o1615873  postprocess_swdn_2011-2021.o1615883  postprocess_t_10_2000-2010.o1615558  postprocess_t_10_2011-2021.o1615615  postprocess_u_10_2000-2010.o1615854  postprocess_u_10_2011-2021.o1615860  postprocess_v_10_2000-2010.o1615862  postprocess_v_10_2011-2021.o1615865  prec_postprocessing_1_2.sh  prec_postprocessing_2_2.sh  prec_preprocess.sh  q_10_postprocessing_1_2.sh  q_10_postprocessing_2_2.sh  q_10_preprocess.sh  (+11 more)
data/interim/: JRA55  README.md
data/scripts/ERA5/: 00_link_era5.py
data/scripts/JRA55/: 00_link_JRA55.py
docs/: api.rst  conf.py  environment.yml  index.rst
notebooks/diagnostics/: check_JRA55_perturbation.ipynb
tests/: test_dummy.py
(+278 files in other folders)
